tests/neg/firstError.scala
. // error: expected class or object definition

\u890u3084eu // error: error in unicode escape // error: illegal character '\uffff'

